@@ -19,27 +19,33 @@ endif
 
 CFLAGS += $(INCLUDE) -lstdc++ # -g -p -pg
 
+ifeq ($(ENABLE_SHARED),yes)
+ELIB = ../libopenjpeg.so.$(MAJOR).$(MINOR).$(BUILD)
+else
+ELIB = ../libopenjpeg.a
+endif
+
 all: frames_to_mj2 mj2_to_frames extract_j2k_from_mj2 wrap_j2k_in_mj2
 	install -d ../bin
 	install frames_to_mj2 mj2_to_frames extract_j2k_from_mj2 \
 	wrap_j2k_in_mj2 ../bin
 
-frames_to_mj2: frames_to_mj2.c ../libopenjpeg.a
+frames_to_mj2: frames_to_mj2.c $(ELIB)
 	$(CC) $(CFLAGS) ../common/getopt.c mj2_convert.c mj2.c frames_to_mj2.c \
-	-o frames_to_mj2 ../libopenjpeg.a $(USERLIBS)
+	-o frames_to_mj2 $(ELIB) $(USERLIBS)
 
-mj2_to_frames: mj2_to_frames.c ../libopenjpeg.a
+mj2_to_frames: mj2_to_frames.c $(ELIB)
 	$(CC) $(CFLAGS) ../common/getopt.c mj2_convert.c mj2.c \
 	../common/color.c mj2_to_frames.c \
-	-o mj2_to_frames ../libopenjpeg.a $(USERLIBS)
+	-o mj2_to_frames $(ELIB) $(USERLIBS)
 
-extract_j2k_from_mj2: extract_j2k_from_mj2.c ../libopenjpeg.a
+extract_j2k_from_mj2: extract_j2k_from_mj2.c $(ELIB)
 	$(CC) $(CFLAGS) mj2.c extract_j2k_from_mj2.c \
-	-o extract_j2k_from_mj2 ../libopenjpeg.a $(USERLIBS)
+	-o extract_j2k_from_mj2 $(ELIB) $(USERLIBS)
 
-wrap_j2k_in_mj2: wrap_j2k_in_mj2.c ../libopenjpeg.a
+wrap_j2k_in_mj2: wrap_j2k_in_mj2.c $(ELIB)
 	$(CC) $(CFLAGS) mj2.c wrap_j2k_in_mj2.c \
-	-o wrap_j2k_in_mj2 ../libopenjpeg.a $(USERLIBS)
+	-o wrap_j2k_in_mj2 $(ELIB) $(USERLIBS)
 
 clean:
 	rm -f frames_to_mj2 mj2_to_frames extract_j2k_from_mj2 wrap_j2k_in_mj2
